fixed missing space under navbar link

--- a/src/main.scss
+++ b/src/main.scss
@@ -186,6 +186,7 @@ header {
         height: 36px;
         justify-content: center;
         width: 100%;
+        padding-bottom: 1em;
 
         ul {
             align-items: stretch;
